# hackyeah2024-ml

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  scrape.py  sessions.db
.streamlit/: config.toml
hackyeah/: __init__.py  fetch_html.py  general_scraping.py  get_website_content.py  get_website_text.py  hackyeah.py  llms.py  main.py  rank_urls.py  scraping.py  structured_llms.py  templates.py  url_graph.py  utils.py
hackyeah/chains/: __init__.py  decide.py  rank_urls.py  summary_html.py
hackyeah/utils/: templates.py  url_filter.py
notebooks/: scrape.ipynb  scrapegraph.ipynb  som.ipynb
scripts/: app.py  easytalk.py  general_scraping.py  scrape_concurrency.py
scripts/.streamlit/: config.toml
scripts/pages/: chat.py  home.py
