[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackyeah-2024"
version = "0.0.1"
description = "HackYeah 2024"

requires-python = ">= 3.8, <= 3.12"

dependencies = [
    "numpy ~= 1.26.4",
    "pandas ~= 1.5.3",
    "ruff == 0.6.2"
]


[tool.setuptools]
packages = ["hackyeah"]