[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackyeah-2024"
version = "0.0.1"
description = "HackYeah 2024"

requires-python = ">= 3.8, <= 3.12"

dependencies = [
    "numpy ~= 1.26.4",
    "pandas ~= 2.2.3",
    "ruff == 0.6.2",
    "streamlit==1.38.0",
    "beautifulsoup4",
    "langchain==0.3.1",
    "langchain_openai==0.2.1",
    "scrapegraphai==1.25.0",
    "playwright==1.47.0"
]


[tool.setuptools]
packages = ["hackyeah"]